fix: truncate long strings in the side nav components

--- a/packages/pelagos/src/sideNav/SideNav.less
+++ b/packages/pelagos/src/sideNav/SideNav.less
@@ -15,6 +15,7 @@
 			padding: @sp-16 0 0;
 			margin: 0;
 			list-style: none;
+			overflow-x: hidden;
 			overflow-y: auto;
 		}
 
@@ -24,7 +25,7 @@
 			position: relative;
 			display: flex;
 			align-items: center;
-			justify-content: space-between;
+			text-align: left;
 			width: 100%;
 			height: 32px;
 			color: var(--text-secondary);
@@ -65,7 +66,8 @@
 		}
 
 		&__submenuTitle {
-			@ellipsis();
+			@base-ellipsis();
+			flex: 1;
 		}
 
 		&__icon {
@@ -85,13 +87,13 @@
 
 		&__link {
 			@font-14-600();
-			@ellipsis();
 			position: relative;
 			display: flex;
 			align-items: center;
 			min-height: 32px;
 			color: var(--text-secondary);
 			padding: 0 @sp-16;
+			overflow: hidden;
 			text-decoration: none;
 			transition: color 0.15s ease-out, background-color 0.15s ease-out;
 
@@ -136,8 +138,12 @@
 			}
 		}
 
-		&__text--shortcut::first-letter {
-			text-decoration: underline;
+		&__text {
+			@base-ellipsis();
+
+			&--shortcut::first-letter {
+				text-decoration: underline;
+			}
 		}
 
 		&__divider {
